# yew-ssr-bazel

./: BUILD  Cargo.toml  ISSUES.md  README.md  WORKSPACE  crates.bzl  index.html
src/: lib.rs
