[package]
name = "simple_ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "simple_ssr_hydrate"
required-features = ["hydration"]

[[bin]]
name = "simple_ssr_server"
required-features = ["ssr"]

[dependencies]
yew = "0.20.0"
serde = { version = "1.0.148", features = ["derive"] }
uuid = { version = "1.2.2", features = ["serde"] }
futures = "0.3.25"
bytes = "1.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
log = "0.4.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.22.0", features = ["full"] }
warp = "0.3.3"
clap = { version = "3.2.23", features = ["derive"] }

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]
