[package]
name = "simple_ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "simple_ssr_hydrate"
required-features = ["hydration"]

[[bin]]
name = "simple_ssr_server"
required-features = ["ssr"]

[dependencies]
yew = "0.20.0"
yew-router = "0.17.0"
serde = { version = "1.0.148", features = ["derive"] }
uuid = { version = "1.2.2", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
log = "0.4.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.5"
futures = "0.3.25"
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.3", features = ["fs"] }
hyper = { version = "0.14", features = ["server", "http1"] }
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.22.0", features = ["full"] }
clap = { version = "3.2.23", features = ["derive"] }

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]
